// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`translation replace uploads sources, creating the nested directory hierarchy 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Directory crowdin created
◆  Directory en created
◆  Directory main created
◆  Directory org created
◆  Directory resources created
◆  Directory src created
◆  File 'en/src/main/resources/android.xml'
◆  File 'en/src/main/resources/org/crowdin/android.xml'
◆  File 'en/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace updates the existing sources without creating anything new 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  File 'en/src/main/resources/android.xml'
◆  File 'en/src/main/resources/org/crowdin/android.xml'
◆  File 'en/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace previews uploading translations as a dry run 1`] = `
"●  Fetching project files
●  Fetching project info
●  File it/src/main/resources/android.xml would be queued for translations import
●  File it/src/main/resources/org/crowdin/android.xml would be queued for translations import
●  File it/src/main/resources/org/crowdin/strings.xml would be queued for translations import
●  File uk/src/main/resources/android.xml would be queued for translations import
●  File uk/src/main/resources/org/crowdin/android.xml would be queued for translations import
●  File uk/src/main/resources/org/crowdin/strings.xml would be queued for translations import
●  Project files fetched
●  Project info fetched"
`;

exports[`translation replace uploads translations for it and uk 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
Importing translations for file 'it/src/main/resources/android.xml'
Importing translations for file 'it/src/main/resources/org/crowdin/android.xml'
Importing translations for file 'uk/src/main/resources/android.xml'
Importing translations for file 'uk/src/main/resources/org/crowdin/android.xml'
◆  File 'it/src/main/resources/android.xml'
◆  File 'it/src/main/resources/org/crowdin/android.xml'
◆  File 'uk/src/main/resources/android.xml'
◆  File 'uk/src/main/resources/org/crowdin/android.xml'
Importing translations for file 'it/src/main/resources/org/crowdin/strings.xml'
Importing translations for file 'uk/src/main/resources/org/crowdin/strings.xml'
◆  File 'it/src/main/resources/org/crowdin/strings.xml'
◆  File 'uk/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace previews downloading translations as a dry run 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
it/src/main/resources/android.xml
it/src/main/resources/org/crowdin/android.xml
it/src/main/resources/org/crowdin/strings.xml
uk/src/main/resources/android.xml
uk/src/main/resources/org/crowdin/android.xml
uk/src/main/resources/org/crowdin/strings.xml"
`;

exports[`translation replace downloads translations, overwriting the local it/uk trees 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Project info fetched
●  Translations built
◆  Done
◆  File it/src/main/resources/android.xml extracted
◆  File it/src/main/resources/org/crowdin/android.xml extracted
◆  File it/src/main/resources/org/crowdin/strings.xml extracted
◆  File uk/src/main/resources/android.xml extracted
◆  File uk/src/main/resources/org/crowdin/android.xml extracted
◆  File uk/src/main/resources/org/crowdin/strings.xml extracted"
`;

exports[`translation replace uploads sources to a brand-new branch, creating the directory hierarchy again 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  Directory crowdin created
◆  Directory en created
◆  Directory main created
◆  Directory org created
◆  Directory resources created
◆  Directory src created
◆  File 'en/src/main/resources/android.xml'
◆  File 'en/src/main/resources/org/crowdin/android.xml'
◆  File 'en/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace updates sources on the branch (branch already exists) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
◆  File 'en/src/main/resources/android.xml'
◆  File 'en/src/main/resources/org/crowdin/android.xml'
◆  File 'en/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace previews uploading translations as a dry run on the branch 1`] = `
"●  Fetching project files
●  Fetching project info
●  File it/src/main/resources/android.xml would be queued for translations import
●  File it/src/main/resources/org/crowdin/android.xml would be queued for translations import
●  File it/src/main/resources/org/crowdin/strings.xml would be queued for translations import
●  File uk/src/main/resources/android.xml would be queued for translations import
●  File uk/src/main/resources/org/crowdin/android.xml would be queued for translations import
●  File uk/src/main/resources/org/crowdin/strings.xml would be queued for translations import
●  Project files fetched
●  Project info fetched"
`;

exports[`translation replace re-uploads translations to the already-translated master files (no -b, matching the literal PHP call) 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
Importing translations for file 'it/src/main/resources/android.xml'
Importing translations for file 'it/src/main/resources/org/crowdin/android.xml'
Importing translations for file 'uk/src/main/resources/android.xml'
Importing translations for file 'uk/src/main/resources/org/crowdin/android.xml'
◆  File 'it/src/main/resources/android.xml'
◆  File 'it/src/main/resources/org/crowdin/android.xml'
◆  File 'uk/src/main/resources/android.xml'
◆  File 'uk/src/main/resources/org/crowdin/android.xml'
Importing translations for file 'it/src/main/resources/org/crowdin/strings.xml'
Importing translations for file 'uk/src/main/resources/org/crowdin/strings.xml'
◆  File 'it/src/main/resources/org/crowdin/strings.xml'
◆  File 'uk/src/main/resources/org/crowdin/strings.xml'"
`;

exports[`translation replace previews downloading translations on the branch as a dry run 1`] = `
"●  Fetching project files
●  Fetching project info
●  Project files fetched
●  Project info fetched
it/src/main/resources/android.xml
it/src/main/resources/org/crowdin/android.xml
it/src/main/resources/org/crowdin/strings.xml
uk/src/main/resources/android.xml
uk/src/main/resources/org/crowdin/android.xml
uk/src/main/resources/org/crowdin/strings.xml"
`;

exports[`translation replace downloads translations on the branch 1`] = `
"●  Building translations
●  Building translations...
●  Downloading translations
●  Fetching project info
●  Project info fetched
●  Translations built
◆  Done
◆  File it/src/main/resources/android.xml extracted
◆  File it/src/main/resources/org/crowdin/android.xml extracted
◆  File it/src/main/resources/org/crowdin/strings.xml extracted
◆  File uk/src/main/resources/android.xml extracted
◆  File uk/src/main/resources/org/crowdin/android.xml extracted
◆  File uk/src/main/resources/org/crowdin/strings.xml extracted"
`;
